--- a/edit.html
+++ b/edit.html
@@ -15,9 +15,11 @@
         <input type="text" id="note-title" placeholder="Note title"><br/><br/>
         <label for="note-body">Note:</label><br />
         <textarea id="note-body" cols="50" rows="6" placeholder="Enter note text..."></textarea><br/>
+        <p id="edited"></p><br/>
         <button id="done">Done</button>
         <button id="remove-note">Remove note</button>
     </header>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
     <script src="notes-funcs.js"></script>
     <script src="notes-edit.js"></script>
 </body>
