--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </label>
             <label for="filter">
                 Sort:
-                <select class="filter">
+                <select id="filter">
                     <option value="">Choose an option...</option>
                     <option value="lastEdited">By last edited</option>
                     <option value="recentlyCreated">By recently created</option>
@@ -33,6 +33,7 @@
         </div>
    </div>
     <p class="footer">This application was created by John Chase</p>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
     <script src="uuid.js"></script>
     <script src="notes-funcs.js"></script>
     <script src="notes-app.js"></script>
