Add header footer classes

--- a/edit.html
+++ b/edit.html
@@ -11,6 +11,8 @@
     <header>
         <h1 id="title">Notes<span>App</span></h1>
         <h2>Edit Note</h2>
+    </header>
+    <div class="content">
         <label for="note-title">Title:</label><br />
         <input type="text" id="note-title" placeholder="Note title"><br/><br/>
         <label for="note-body">Note:</label><br />
@@ -18,7 +20,8 @@
         <p id="edited"></p><br/>
         <button id="done">Done</button>
         <button id="remove-note">Remove note</button>
-    </header>
+    </div>
+    <p class="footer">This application was created by John Chase</p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
     <script src="notes-funcs.js"></script>
     <script src="notes-edit.js"></script>
