--- a/index.html
+++ b/index.html
@@ -13,26 +13,24 @@
         <h1 id="title">Notes<span>App</span></h1>
         <h2>Take notes and never forget</h2>
     </header>
-    <div class="content">
-        <div id="actions-top">
-            <label for="search-text">
-                Search: <input type="text" id="search-text" placeholder="Filter notes..." />
-            </label>
-            <label for="filter">
-                Sort:
-                <select id="filter">
-                    <option value="">Choose an option...</option>
-                    <option value="lastEdited">By last edited</option>
-                    <option value="recentlyCreated">By recently created</option>
-                    <option value="alpha">Alphabetically</option>
-                </select>
-            </label>        
-        </div>    
+    <div id="actions">
+        <button id="create-note">Add Note</button>
+        <label for="search-text">
+            Search: <input type="text" id="search-text" placeholder="Filter notes..." />
+        </label>
+        <label for="filter">
+            Sort:
+            <select id="filter">
+                <option value="">Choose an option...</option>
+                <option value="lastEdited">By last edited</option>
+                <option value="recentlyCreated">By recently created</option>
+                <option value="alpha">Alphabetically</option>
+            </select>
+        </label>        
+    </div>    
+    <div>
         <div id="notes"><!--notes generated here--></div>
-        <div id="actions-bottom">
-            <button id="create-note">Add Note</button>
-        </div>
-   </div>
+    </div>
     <p class="footer">This application was created by John Chase</p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
     <script src="uuid.js"></script>
