--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Notes</title>
-    <link rel="stylesheet" href="notes.css">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/index.css">
+    <link rel="icon" type="images/png" sizes="16x16" href="favicon-16x16.png">
 </head>
 <body>
     <header>
@@ -16,25 +17,20 @@
     <div id="actions">
         <button id="create-note">Add Note</button>
         <label for="search-text">
-            Search: <input type="text" id="search-text" placeholder="Filter notes..." />
-        </label>
-        <label for="filter">
-            Sort:
-            <select id="filter">
-                <option value="">Choose an option...</option>
-                <option value="lastEdited">By last edited</option>
-                <option value="recentlyCreated">By recently created</option>
-                <option value="alpha">Alphabetically</option>
-            </select>
-        </label>        
+        Search: <input type="text" id="search-text" placeholder="Filter notes..." size="25" /></label>
+        <label for="filter"> Sort:</label> 
+        <select id="filter" autofocus="true">
+            <option value="">Choose an option...</option>
+            <option value="lastEdited">By last edited</option>
+            <option value="recentlyCreated">By recently created</option>
+            <option value="alpha">Alphabetically</option>
+        </select>
     </div>    
     <div>
         <div id="notes"><!--notes generated here--></div>
     </div>
     <p class="footer">This application was created by John Chase</p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
-    <script src="uuid.js"></script>
-    <script src="notes-funcs.js"></script>
-    <script src="notes-app.js"></script>
+    <script src="./scripts/index-bundle.js"></script>
 </body>
 </html>
